creusot/tests/should_fail/diagnostics/add_unimplemented.stderr
error[E0277]: Cannot add `_` to `i32` in logic
 --> add_unimplemented.rs:8:9
  |
8 |     x + y
  |     ----^
  |     |   |
  |     |   no implementation for `i32 + _` in logic
  |     required by a bound introduced by this call
  |
  = help: the trait `creusot_contracts::logic::ops::AddLogic<_>` is not implemented for `i32`
  = help: the trait `creusot_contracts::logic::ops::AddLogic` is implemented for `creusot_contracts::Int`

error[E0277]: Cannot add `i32` to `i32` in logic
 --> add_unimplemented.rs:8:5
  |
8 |     x + y
  |     ^^^^^ no implementation for `i32 + i32` in logic
  |
  = help: the trait `creusot_contracts::logic::ops::AddLogic` is not implemented for `i32`
  = help: the trait `creusot_contracts::logic::ops::AddLogic` is implemented for `creusot_contracts::Int`

error: internal error: Cannot fetch THIR body

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
